security audit + improvements
